// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DataListItem /> with value: a number should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="data-list-item"
  >
    <dt
      class="data-list-label"
    >
      Power Level
    </dt>
    <dd
      class="data-list-value"
    >
      9000
    </dd>
  </div>
</DocumentFragment>
`;

exports[`<DataListItem /> with value: a string should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="data-list-item"
  >
    <dt
      class="data-list-label"
    >
      Material Component
    </dt>
    <dd
      class="data-list-value"
    >
      The stone tear of a weeping angel
    </dd>
  </div>
</DocumentFragment>
`;

exports[`<DataListItem /> with value: an element should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="data-list-item"
  >
    <dt
      class="data-list-label"
    >
      Components
    </dt>
    <dd
      class="data-list-value"
    >
      <span>
        V, S, M (a glob of ectoplasm)
      </span>
    </dd>
  </div>
</DocumentFragment>
`;

exports[`<DataListItem /> with value: false should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="data-list-item"
  >
    <dt
      class="data-list-label"
    >
      Somatic Component
    </dt>
    <dd
      class="data-list-value"
    >
      false
    </dd>
  </div>
</DocumentFragment>
`;

exports[`<DataListItem /> with value: null and defaultValue: a string should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="data-list-item"
  >
    <dt
      class="data-list-label"
    >
      Casting Time
    </dt>
    <dd
      class="data-list-value"
    >
      1 action
    </dd>
  </div>
</DocumentFragment>
`;

exports[`<DataListItem /> with value: null and defaultValue: an element should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="data-list-item"
  >
    <dt
      class="data-list-label"
    >
      Category
    </dt>
    <dd
      class="data-list-value"
    >
      <strong>
        Arcane
      </strong>
    </dd>
  </div>
</DocumentFragment>
`;

exports[`<DataListItem /> with value: null should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="data-list-item"
  >
    <dt
      class="data-list-label"
    >
      Classification
    </dt>
    <dd
      class="data-list-value"
    />
  </div>
</DocumentFragment>
`;

exports[`<DataListItem /> with value: true should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="data-list-item"
  >
    <dt
      class="data-list-label"
    >
      Verbal Component
    </dt>
    <dd
      class="data-list-value"
    >
      true
    </dd>
  </div>
</DocumentFragment>
`;
